Crash when creating off-screen pose asset #95256

Closed
opened 2022-01-27 14:55:57 +01:00 by Richard Antalik · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 83094d9a0d
Worked: did not check

Short description of error
Crash happens when 256 pose assets are created

Exact steps for others to reproduce the error
crash.zip

  • Open file
  • Press Create Pose Asset button

Crashes on NULL dereference.

Trace:

>	blender.exe!filelist_file_get_id(const FileDirEntry * file) Line 2316	C

 	blender.exe!ED_fileselect_activate_by_id(SpaceFile * sfile, ID * asset_id, const bool deferred) Line 538	C
 	blender.exe!on_reload_activate_by_id(SpaceFile * sfile, void * custom_data) Line 512	C
 	blender.exe!file_on_reload_callback_call(SpaceFile * sfile) Line 429	C
 	blender.exe!file_listener(const wmSpaceTypeListenerParams * listener_params) Line 478	C
 	blender.exe!ED_area_do_listen(wmSpaceTypeListenerParams * params) Line 177	C
 	blender.exe!wm_event_do_notifiers(bContext * C) Line 589	C
 	blender.exe!WM_main(bContext * C) Line 645	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564	C

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 83094d9a0d Worked: did not check **Short description of error** Crash happens when 256 pose assets are created **Exact steps for others to reproduce the error** [crash.zip](https://archive.blender.org/developer/F12827814/crash.zip) - Open file - Press Create Pose Asset button Crashes on NULL dereference. Trace: ``` > blender.exe!filelist_file_get_id(const FileDirEntry * file) Line 2316 C blender.exe!ED_fileselect_activate_by_id(SpaceFile * sfile, ID * asset_id, const bool deferred) Line 538 C blender.exe!on_reload_activate_by_id(SpaceFile * sfile, void * custom_data) Line 512 C blender.exe!file_on_reload_callback_call(SpaceFile * sfile) Line 429 C blender.exe!file_listener(const wmSpaceTypeListenerParams * listener_params) Line 478 C blender.exe!ED_area_do_listen(wmSpaceTypeListenerParams * params) Line 177 C blender.exe!wm_event_do_notifiers(bContext * C) Line 589 C blender.exe!WM_main(bContext * C) Line 645 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564 C ```
Author
Member

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Sybren A. Stüvel self-assigned this 2022-03-07 16:30:26 +01:00
Sybren A. Stüvel changed title from Crash when creating pose asset to Crash when creating off-screen pose asset 2022-03-07 16:42:24 +01:00

This issue was referenced by 2d06b97d29

This issue was referenced by 2d06b97d2918f389ac266b3789aa340c223df463

This issue was referenced by 5dca3ee6a2

This issue was referenced by 5dca3ee6a23f002b59c78c54da53c9f45e2d1173

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:53:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95256
No description provided.